tests/invalid_options_file/no_var.options_file
# Delete the variable name.
= --warn-nothing-exported --warn-interface-imports
